Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Hội An gần như vẹn nguyên sau trăm năm",
+    "content": "Phố cổ Hội An, với hơn 1.100 di tích, đã trải qua hàng trăm năm và phải đối mặt với nhiều tác động từ bên ngoài nhưng vẫn được gìn giữ và bảo tồn gần như nguyên vẹn. Điều này cho thấy nỗ lực to lớn trong việc bảo tồn di sản văn hóa của địa phương, giúp Hội An tiếp tục thu hút du khách và giữ gìn bản sắc văn hóa. Những giá trị lịch sử và văn hóa của Hội An vẫn được duy trì qua thời gian, tạo nên một điểm đến độc đáo cho du khách.",
+    "link": "https://vnexpress.net/hoi-an-gan-nhu-ven-nguyen-sau-tram-nam-4865634.html",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hội An đã giữ gìn được bao nhiêu di tích trong suốt hàng trăm năm qua?",
+    "answers": [
+      {
+        "text": "Hơn 1.100 di tích",
+        "correct": true
+      },
+      {
+        "text": "Hơn 500 di tích",
+        "correct": false
+      },
+      {
+        "text": "Hơn 800 di tích",
+        "correct": false
+      },
+      {
+        "text": "Hơn 1.500 di tích",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chủ nhà hàng nổi Elisa trên sông Sài Gòn bị ngân hàng xiết nợ",
     "content": "Chủ nhà hàng nổi Elisa trên sông Sài Gòn, Công ty TNHH Thương mại Hào Huy, đang đối mặt với việc bị ngân hàng Agribank xiết nợ do khoản nợ gần 134 tỉ đồng. Tài sản đảm bảo cho khoản nợ này là tàu Elisa, nhà hàng nổi lớn nhất Việt Nam có sức chứa 1.000 khách. Đấu giá tài sản sẽ được tổ chức vào ngày 18-4 tới tại TP.HCM.",
     "link": "https://tuoitre.vn/chu-nha-hang-noi-elisa-tren-song-sai-gon-bi-ngan-hang-xiet-no-20250326215833856.htm",
@@ -3533,33 +3560,6 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
     "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
     "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
@@ -3586,6 +3586,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -3711,6 +3738,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -3737,33 +3791,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
