--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "10 trường tốt nhất thế giới 2025 về đào tạo ngành Kỹ thuật - Công nghệ",
+    "content": "Theo bảng xếp hạng của tổ chức Quacquarelli Symonds (QS) năm 2025, Viện Công nghệ Massachusetts (MIT) đứng đầu danh sách 10 trường đại học tốt nhất thế giới về đào tạo ngành Kỹ thuật và Công nghệ với số điểm 96,2. Đáng chú ý, Đại học Thanh Hoa (Trung Quốc) đã trở lại top 10 sau một năm vắng bóng, xếp thứ 7 với 91,3 điểm. Bảng xếp hạng này dựa trên nhiều tiêu chí như uy tín học thuật và tỷ lệ trích dẫn khoa học.",
+    "link": "https://dantri.com.vn/giao-duc/10-truong-tot-nhat-the-gioi-2025-ve-dao-tao-nganh-ky-thuat-cong-nghe-20250326160709607.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những trường nào đứng đầu trong bảng xếp hạng QS về Kỹ thuật và Công nghệ năm 2025?",
+    "answers": [
+      {
+        "text": "Viện Công nghệ Massachusetts (MIT) và Đại học Thanh Hoa",
+        "correct": true
+      },
+      {
+        "text": "Đại học Harvard và Đại học Oxford",
+        "correct": false
+      },
+      {
+        "text": "Đại học Stanford và Đại học Cambridge",
+        "correct": false
+      },
+      {
+        "text": "Đại học California và Viện Kỹ thuật Liên bang Thụy Sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "13 lựa chọn thay thế cà phê giúp bổ sung năng lượng",
     "content": "Bài viết giới thiệu 13 lựa chọn thay thế cà phê giúp bổ sung năng lượng, bao gồm matcha, trà xanh, trà đen, trà chai, cà phê rau diếp xoăn, ca cao nóng, nước hầm xương, sữa vàng, cà phê nấm, trà hoa dâm bụt, cà phê bồ công anh, trà bạc hà và nước chanh. Những loại đồ uống này không chỉ cung cấp năng lượng mà còn giúp giảm lo âu và cải thiện sức khỏe tổng thể. Các lựa chọn này phù hợp cho những người muốn giảm lượng caffein hoặc tìm kiếm thức uống lành mạnh hơn.",
     "link": "https://vnexpress.net/13-lua-chon-thay-the-ca-phe-giup-bo-sung-nang-luong-4864891.html",
@@ -3560,6 +3587,37 @@
     ]
   },
   {
+    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
+    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
+    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
+    "answers": [
+      {
+        "text": "60 kg",
+        "correct": true
+      },
+      {
+        "text": "50 kg",
+        "correct": false
+      },
+      {
+        "text": "70 kg",
+        "correct": false
+      },
+      {
+        "text": "40 kg",
+        "correct": false
+      },
+      {
+        "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
     "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
     "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
@@ -3609,37 +3667,6 @@
       },
       {
         "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
-    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
-    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
-    "answers": [
-      {
-        "text": "60 kg",
-        "correct": true
-      },
-      {
-        "text": "50 kg",
-        "correct": false
-      },
-      {
-        "text": "70 kg",
-        "correct": false
-      },
-      {
-        "text": "40 kg",
-        "correct": false
-      },
-      {
-        "text": "80 kg",
         "correct": false
       }
     ]
@@ -4229,6 +4256,37 @@
     ]
   },
   {
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "answers": [
+      {
+        "text": "Central Bay tại Eco Central Park",
+        "correct": true
+      },
+      {
+        "text": "Milan Workspace",
+        "correct": false
+      },
+      {
+        "text": "Hanoi Creative Space",
+        "correct": false
+      },
+      {
+        "text": "Saigon Coworking Center",
+        "correct": false
+      },
+      {
+        "text": "Da Nang Office Hub",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiêu cơ vân do tập squat quá sức",
     "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
     "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
@@ -4286,37 +4344,6 @@
       },
       {
         "text": "Bệnh tiểu đường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
-    "answers": [
-      {
-        "text": "Central Bay tại Eco Central Park",
-        "correct": true
-      },
-      {
-        "text": "Milan Workspace",
-        "correct": false
-      },
-      {
-        "text": "Hanoi Creative Space",
-        "correct": false
-      },
-      {
-        "text": "Saigon Coworking Center",
-        "correct": false
-      },
-      {
-        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -4550,33 +4577,6 @@
     ]
   },
   {
-    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
-    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
-    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
-    "answers": [
-      {
-        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
-        "correct": true
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
     "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
     "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
@@ -4599,6 +4599,33 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
+    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
+    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
+    "answers": [
+      {
+        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
         "correct": false
       }
     ]
