Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "'Bất lực hoàn toàn' sau uống rượu ngâm cao trăn",
+    "content": "Một người đàn ông 31 tuổi ở TP.HCM đã phải phẫu thuật đặt thể hang nhân tạo do bị rối loạn cương nặng sau hơn một năm uống rượu ngâm cao trăn. Dù đã lấy vợ một năm nhưng anh không thể có con, hoàn toàn bất lực trong quan hệ tình dục. Bác sĩ cho biết nguyên nhân gây ra tình trạng này có thể liên quan đến thói quen uống rượu ngâm cao trăn, vốn chứa nhiều khoáng chất nhưng cũng có thể gây giảm ham muốn và rối loạn cương. Bệnh nhân được điều trị bằng cấy ghép thể hang nhân tạo, giúp cải thiện chất lượng cuộc sống cho người bệnh và gia đình.",
+    "link": "https://vnexpress.net/bat-luc-hoan-toan-sau-uong-ruou-ngam-cao-tran-4866265.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao người đàn ông 31 tuổi lại bị bất lực hoàn toàn?",
+    "answers": [
+      {
+        "text": "Do uống rượu ngâm cao trăn",
+        "correct": true
+      },
+      {
+        "text": "Do chấn thương vùng chậu",
+        "correct": false
+      },
+      {
+        "text": "Do thiếu vitamin",
+        "correct": false
+      },
+      {
+        "text": "Do tâm lý căng thẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 trường tốt nhất thế giới 2025 về đào tạo ngành Kỹ thuật - Công nghệ",
     "content": "Theo bảng xếp hạng của tổ chức Quacquarelli Symonds (QS) năm 2025, Viện Công nghệ Massachusetts (MIT) đứng đầu danh sách 10 trường đại học tốt nhất thế giới về đào tạo ngành Kỹ thuật và Công nghệ với số điểm 96,2. Đáng chú ý, Đại học Thanh Hoa (Trung Quốc) đã trở lại top 10 sau một năm vắng bóng, xếp thứ 7 với 91,3 điểm. Bảng xếp hạng này dựa trên nhiều tiêu chí như uy tín học thuật và tỷ lệ trích dẫn khoa học.",
     "link": "https://dantri.com.vn/giao-duc/10-truong-tot-nhat-the-gioi-2025-ve-dao-tao-nganh-ky-thuat-cong-nghe-20250326160709607.htm",
