--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
+    "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
+    "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để chọn tên tỉnh thành sau sáp nhập?",
+    "answers": [
+      {
+        "text": "Chọn tên của địa phương nổi bật hơn",
+        "correct": true
+      },
+      {
+        "text": "Chọn tên mới không liên quan đến lịch sử",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên tên cũ của tất cả các tỉnh",
+        "correct": false
+      },
+      {
+        "text": "Ghép tên của hai vùng đất không liên quan",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
     "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
     "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
@@ -1495,33 +1522,6 @@
     ]
   },
   {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -1548,6 +1548,33 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -2395,33 +2422,6 @@
     ]
   },
   {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -2448,6 +2448,33 @@
       },
       {
         "text": "Herbicide D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
@@ -3816,33 +3843,6 @@
       },
       {
         "text": "Hyundai Accent và Nissan Sunny",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bộ Nội vụ gợi ý cách đặt tên xã mới sau sáp nhập",
-    "content": "Bộ Nội vụ đã đưa ra hướng dẫn cho các địa phương về việc đặt tên cho các xã mới sau khi sáp nhập. Tên mới cần phải ngắn gọn, dễ nhớ và có hệ thống, ví dụ như 'tên huyện cũ + số thứ tự'. Các tên gọi cũng nên dựa trên tên cũ có giá trị lịch sử, văn hóa và được người dân ủng hộ. Đồng thời, các xã mới phải đáp ứng tiêu chuẩn về diện tích và số dân theo quy định.",
-    "link": "https://vnexpress.net/bo-noi-vu-goi-y-cach-dat-ten-xa-moi-sau-sap-nhap-4865898.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bộ Nội vụ gợi ý cách nào để đặt tên xã mới sau sáp nhập?",
-    "answers": [
-      {
-        "text": "Tên huyện cũ kèm theo số thứ tự",
-        "correct": true
-      },
-      {
-        "text": "Tên ngẫu nhiên không có ý nghĩa",
-        "correct": false
-      },
-      {
-        "text": "Tên của một nhân vật nổi tiếng",
-        "correct": false
-      },
-      {
-        "text": "Tên theo phong trào hiện tại",
         "correct": false
       }
     ]
