Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Nhà vô địch Club World Cup được thưởng 125 triệu USD",
+    "content": "FIFA đã công bố phiên bản mới của Club World Cup vào hè 2025 với quỹ tiền thưởng lên tới 1 tỷ USD, trong đó nhà vô địch sẽ nhận được 125 triệu USD. Số tiền này bao gồm 525 triệu USD đảm bảo cho các đội tham gia, với khoản tiền thưởng cho các đội từ nhiều khu vực khác nhau. Giải đấu sẽ có 32 đội tham gia, diễn ra từ 15/6 đến 13/7/2025 tại Mỹ, với thể thức giống như FIFA World Cup.",
+    "link": "https://vnexpress.net/nha-vo-dich-club-world-cup-duoc-thuong-125-trieu-usd-4866343.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nhà vô địch Club World Cup 2025 sẽ nhận được bao nhiêu tiền thưởng?",
+    "answers": [
+      {
+        "text": "125 triệu USD",
+        "correct": true
+      },
+      {
+        "text": "100 triệu USD",
+        "correct": false
+      },
+      {
+        "text": "40 triệu USD",
+        "correct": false
+      },
+      {
+        "text": "9,55 triệu USD",
+        "correct": false
+      },
+      {
+        "text": "15,21 triệu USD",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vệ sĩ cũ của Maradona bị bắt",
     "content": "Cựu vệ sĩ của Diego Maradona, Julio Cesar Coria, đã bị bắt tại Buenos Aires vào ngày 25/3 vì cáo buộc khai man trong phiên tòa xét xử cái chết của huyền thoại bóng đá Argentina. Tòa án đang xét xử các cáo buộc liên quan đến cái chết của Maradona, và Coria được triệu tập làm nhân chứng nhưng đã bị bắt sau khi bị công tố viên cáo buộc khai man về mối quan hệ với bác sĩ của Maradona. Cả nhóm y tế liên quan đến cái chết của Maradona có thể phải đối mặt với án tù lên đến 25 năm nếu bị kết án.",
     "link": "https://vnexpress.net/ve-si-cu-cua-maradona-bi-bat-4866347.html",
@@ -583,33 +614,6 @@
     ]
   },
   {
-    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
-    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
-    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
-    "answers": [
-      {
-        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
     "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
     "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
@@ -632,6 +636,33 @@
       },
       {
         "text": "Ghép tên của hai vùng đất không liên quan",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
+    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
+    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
+    "answers": [
+      {
+        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
         "correct": false
       }
     ]
