--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,37 @@
     ]
   },
   {
+    "title": "Huỳnh Hiểu Minh: Đại gia làng giải trí và những mối tình \"ồn ào\"",
+    "content": "Huỳnh Hiểu Minh là một trong những ngôi sao hàng đầu của làng giải trí Hoa ngữ với hơn 20 năm hoạt động và khối tài sản ước tính lên tới 10 tỷ NDT. Anh nổi tiếng không chỉ với sự nghiệp diễn xuất thành công mà còn với nhiều mối tình ồn ào, bao gồm cuộc hôn nhân với Angelababy và mối quan hệ hiện tại với Diệp Kha. Dù sự nghiệp gần đây gặp khó khăn với bộ phim \"The Wig\" không thành công, Huỳnh Hiểu Minh vẫn giữ được vị thế và tiếng tăm trong ngành giải trí.",
+    "link": "https://dantri.com.vn/giai-tri/huynh-hieu-minh-dai-gia-lang-giai-tri-va-nhung-moi-tinh-on-ao-20250324115320186.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Huỳnh Hiểu Minh nổi tiếng với những vai diễn nào trong sự nghiệp của mình?",
+    "answers": [
+      {
+        "text": "Dương Quá trong Thần điêu đại hiệp",
+        "correct": true
+      },
+      {
+        "text": "Tiêu Kiếm trong Hoàn Châu cách cách",
+        "correct": false
+      },
+      {
+        "text": "Hứa Văn Cường trong Tân bến Thượng Hải",
+        "correct": false
+      },
+      {
+        "text": "Vai diễn trong phim Dạ yến",
+        "correct": false
+      },
+      {
+        "text": "Vai diễn trong Lộc đỉnh ký",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tin tức sáng 27-3: TP.HCM đổi nơi cấp phù hiệu xe kinh doanh vận tải; Kho bạc chào mua 1,2 tỉ USD",
     "content": "Tin tức sáng 27-3 cho biết TP.HCM sẽ thay đổi địa điểm cấp phù hiệu cho xe kinh doanh vận tải, bắt đầu từ ngày 1-4 tới. Địa điểm mới sẽ là bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1. Ngoài ra, Kho bạc Nhà nước cũng thông báo chào mua 1,2 tỉ USD từ các ngân hàng thương mại trong 6 đợt chào mua gần đây, nhằm điều chỉnh tỉ giá USD/VND.",
     "link": "https://tuoitre.vn/tin-tuc-sang-27-3-tp-hcm-doi-noi-cap-phu-hieu-xe-kinh-doanh-van-tai-kho-bac-chao-mua-1-2-ti-usd-20250326203936361.htm",
@@ -2291,33 +2322,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
-    "answers": [
-      {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêm corticoid trị sẹo lồi",
     "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
     "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
@@ -2340,6 +2344,33 @@
       },
       {
         "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "answers": [
+      {
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -2766,33 +2797,6 @@
     ]
   },
   {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -2819,6 +2823,33 @@
       },
       {
         "text": "Herbicide D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
