Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Flick bất bình khi Barca đá 7 trận trong 20 ngày",
+    "content": "HLV Hansi Flick bày tỏ sự không hài lòng với lịch thi đấu của Barcelona trong tháng 3, khi đội bóng này phải thi đấu 7 trận trong 20 ngày. Ông cho rằng lịch thi đấu quá dày đặc không phù hợp, đặc biệt khi các cầu thủ vừa trở về từ các trận đấu quốc tế. Flick nhấn mạnh rằng La Liga cần điều chỉnh lịch thi đấu để tạo điều kiện tốt hơn cho các đội bóng tham dự Champions League.",
+    "link": "https://vnexpress.net/flick-bat-binh-khi-barca-da-7-tran-trong-20-ngay-4866356.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao HLV Hansi Flick không hài lòng với lịch thi đấu của Barca?",
+    "answers": [
+      {
+        "text": "Vì Barca đá 7 trận trong 20 ngày sau khi cầu thủ vừa tham gia các trận quốc tế.",
+        "correct": true
+      },
+      {
+        "text": "Vì lịch thi đấu không phù hợp cho các đội bóng Tây Ban Nha.",
+        "correct": false
+      },
+      {
+        "text": "Vì các cầu thủ của Barca không đủ sức khỏe để thi đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì Flick muốn Barca có nhiều thời gian nghỉ hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thách thức của mẹ đơn thân khi cưới trai tân",
     "content": "Bài viết kể về những khó khăn mà mẹ đơn thân Minh Trúc gặp phải khi tái hôn với trai tân Thuận Phước. Dù được yêu thương và ủng hộ ban đầu, nhưng gia đình chồng đã phân biệt đối xử và dần dần làm cho mối quan hệ trở nên căng thẳng. Cuối cùng, Minh Trúc quyết định ly hôn lần thứ hai do những mâu thuẫn không thể giải quyết. Bài viết cũng chỉ ra rằng nhiều bà mẹ đơn thân vẫn phải đối mặt với định kiến và áp lực từ xã hội khi tìm kiếm hạnh phúc mới.",
     "link": "https://vnexpress.net/thach-thuc-cua-me-don-than-khi-cuoi-trai-tan-4856082.html",
@@ -170,37 +197,6 @@
       },
       {
         "text": "Minh Trúc đã được yêu thương và chăm sóc hoàn toàn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Huỳnh Hiểu Minh: Đại gia làng giải trí và những mối tình \"ồn ào\"",
-    "content": "Huỳnh Hiểu Minh là một trong những ngôi sao hàng đầu của làng giải trí Hoa ngữ với hơn 20 năm hoạt động và khối tài sản ước tính lên tới 10 tỷ NDT. Anh nổi tiếng không chỉ với sự nghiệp diễn xuất thành công mà còn với nhiều mối tình ồn ào, bao gồm cuộc hôn nhân với Angelababy và mối quan hệ hiện tại với Diệp Kha. Dù sự nghiệp gần đây gặp khó khăn với bộ phim \"The Wig\" không thành công, Huỳnh Hiểu Minh vẫn giữ được vị thế và tiếng tăm trong ngành giải trí.",
-    "link": "https://dantri.com.vn/giai-tri/huynh-hieu-minh-dai-gia-lang-giai-tri-va-nhung-moi-tinh-on-ao-20250324115320186.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Huỳnh Hiểu Minh nổi tiếng với những vai diễn nào trong sự nghiệp của mình?",
-    "answers": [
-      {
-        "text": "Dương Quá trong Thần điêu đại hiệp",
-        "correct": true
-      },
-      {
-        "text": "Tiêu Kiếm trong Hoàn Châu cách cách",
-        "correct": false
-      },
-      {
-        "text": "Hứa Văn Cường trong Tân bến Thượng Hải",
-        "correct": false
-      },
-      {
-        "text": "Vai diễn trong phim Dạ yến",
-        "correct": false
-      },
-      {
-        "text": "Vai diễn trong Lộc đỉnh ký",
         "correct": false
       }
     ]
@@ -232,6 +228,37 @@
       },
       {
         "text": "UBND TP.HCM",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Huỳnh Hiểu Minh: Đại gia làng giải trí và những mối tình \"ồn ào\"",
+    "content": "Huỳnh Hiểu Minh là một trong những ngôi sao hàng đầu của làng giải trí Hoa ngữ với hơn 20 năm hoạt động và khối tài sản ước tính lên tới 10 tỷ NDT. Anh nổi tiếng không chỉ với sự nghiệp diễn xuất thành công mà còn với nhiều mối tình ồn ào, bao gồm cuộc hôn nhân với Angelababy và mối quan hệ hiện tại với Diệp Kha. Dù sự nghiệp gần đây gặp khó khăn với bộ phim \"The Wig\" không thành công, Huỳnh Hiểu Minh vẫn giữ được vị thế và tiếng tăm trong ngành giải trí.",
+    "link": "https://dantri.com.vn/giai-tri/huynh-hieu-minh-dai-gia-lang-giai-tri-va-nhung-moi-tinh-on-ao-20250324115320186.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Huỳnh Hiểu Minh nổi tiếng với những vai diễn nào trong sự nghiệp của mình?",
+    "answers": [
+      {
+        "text": "Dương Quá trong Thần điêu đại hiệp",
+        "correct": true
+      },
+      {
+        "text": "Tiêu Kiếm trong Hoàn Châu cách cách",
+        "correct": false
+      },
+      {
+        "text": "Hứa Văn Cường trong Tân bến Thượng Hải",
+        "correct": false
+      },
+      {
+        "text": "Vai diễn trong phim Dạ yến",
+        "correct": false
+      },
+      {
+        "text": "Vai diễn trong Lộc đỉnh ký",
         "correct": false
       }
     ]
@@ -523,33 +550,6 @@
     ]
   },
   {
-    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
-    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
-    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
-    "answers": [
-      {
-        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
     "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
     "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
@@ -572,6 +572,33 @@
       },
       {
         "text": "Ghép tên của hai vùng đất không liên quan",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
+    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
+    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
+    "answers": [
+      {
+        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
         "correct": false
       }
     ]
@@ -1999,33 +2026,6 @@
     ]
   },
   {
-    "title": "Tiêm corticoid trị sẹo lồi",
-    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
-    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
-    "answers": [
-      {
-        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
-        "correct": true
-      },
-      {
-        "text": "Tăng kích thước sẹo lồi.",
-        "correct": false
-      },
-      {
-        "text": "Kích thích sản xuất collagen nhiều hơn.",
-        "correct": false
-      },
-      {
-        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
     "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
     "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
@@ -2048,6 +2048,33 @@
       },
       {
         "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tiêm corticoid trị sẹo lồi",
+    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
+    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
+    "answers": [
+      {
+        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
+        "correct": true
+      },
+      {
+        "text": "Tăng kích thước sẹo lồi.",
+        "correct": false
+      },
+      {
+        "text": "Kích thích sản xuất collagen nhiều hơn.",
+        "correct": false
+      },
+      {
+        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
         "correct": false
       }
     ]
@@ -2474,6 +2501,33 @@
     ]
   },
   {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -2500,33 +2554,6 @@
       },
       {
         "text": "Herbicide D",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
@@ -4221,6 +4248,33 @@
     ]
   },
   {
+    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
+    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
+    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
+    "answers": [
+      {
+        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
+        "correct": true
+      },
+      {
+        "text": "Do thay đổi ban lãnh đạo",
+        "correct": false
+      },
+      {
+        "text": "Vì áp lực từ cổ đông",
+        "correct": false
+      },
+      {
+        "text": "Do quy định mới của HNX",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các mốc thời gian quan trọng kỳ thi tốt nghiệp THPT 2025",
     "content": "Kỳ thi tốt nghiệp THPT năm 2025 sẽ diễn ra vào ngày 26-27 tháng 6. Thí sinh có thể đăng ký dự thi từ ngày 21/4 đến 28/4, trong đó có thời gian để đăng ký thử từ 15-18/4. Bộ GD&ĐT cũng yêu cầu thí sinh sử dụng một loại giấy tờ tùy thân nhất định và đảm bảo ảnh hồ sơ đạt yêu cầu về độ phân giải. Ngày 28/6 sẽ là lịch thi dự phòng.",
     "link": "https://dantri.com.vn/giao-duc/cac-moc-thoi-gian-quan-trong-ky-thi-tot-nghiep-thpt-2025-20250326085929751.htm",
@@ -4247,33 +4301,6 @@
       },
       {
         "text": "Thí sinh chỉ cần thi một môn duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hy hữu: Công ty nhiệt điện của Geleximco báo ‘nhầm’ lỗ đậm thành lãi, huy động nghìn tỉ trái phiếu",
-    "content": "Công ty cổ phần Nhiệt điện Thăng Long, thuộc Tập đoàn Geleximco, vừa đính chính một sai sót nghiêm trọng trong báo cáo tài chính khi báo lãi thay vì lỗ. Theo đó, công ty đã ghi nhận lỗ 528 tỉ đồng cho năm 2023, trong khi năm 2022 lãi 121,8 tỉ đồng. Sai sót này được cho là do nhầm lẫn trong việc đánh dấu vị trí cột 'kỳ trước' và 'kỳ báo cáo'. Ngoài ra, công ty cũng đã huy động gần 1.800 tỉ đồng từ phát hành trái phiếu doanh nghiệp vào tháng 8-2024.",
-    "link": "https://tuoitre.vn/hy-huu-cong-ty-nhiet-dien-cua-geleximco-bao-nham-lo-dam-thanh-lai-huy-dong-nghin-ti-trai-phieu-20250326091855138.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Nhiệt điện Thăng Long phải đính chính báo cáo tài chính?",
-    "answers": [
-      {
-        "text": "Vì sai sót trong việc báo cáo lãi thành lỗ",
-        "correct": true
-      },
-      {
-        "text": "Do thay đổi ban lãnh đạo",
-        "correct": false
-      },
-      {
-        "text": "Vì áp lực từ cổ đông",
-        "correct": false
-      },
-      {
-        "text": "Do quy định mới của HNX",
         "correct": false
       }
     ]
